[package]
name = "rgrep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.5"
thiserror = "1"
glob = "0.3"
regex = "1.5"
anyhow = "1.0"
rayon = "1.5"
colored = "2"
itertools = "0.10"
